[package]
name = "macros"
version = "0.1.1"
edition = "2021"
license = "UNLICENSED"
description = "Rust implementation/interpretation of MarkovJunior"
repository = "https://github.com/DEMIURGE-studio/jammars"
readme = "README.md"

[lib]
name = "rule_macros"
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = "2"